Created a way to produce StateConfigurations